--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,33 @@
 .face{
   float: left;
   position: absolute;
-  width: 300px;
-  padding: 10px;
-  border: solid gray 8px;
+  width: 312px;
+  padding: 15px;
+  border: solid lightgray 8px;
 }
 
 .center{
   text-align: center;
 }
 h2{
-  font-size: 50px;
+  font-size: 40px;
+}
+.light{
+ color: #d8f2ff;
+}
+
+.medium{
+  color: #bde7fc;
+}
+
+.dark{
+  color: #99dcff;
+}
+
+.jumbotron{
+  background-color: #d8f2ff;
+}
+
+.well{
+  background-color: #d8f2ff;
 }
